# tui

./: CMakeLists.txt  LICENSE  README.md
include/tui/: console.hpp  input.hpp  scene.hpp  tui.hpp  widget.hpp
include/tui/widgets/: button.hpp  checkbox.hpp  dropdown.hpp  text.hpp
src/: console.cpp  input.cpp  scene.cpp  tui.cpp  widget.cpp
src/widgets/: button.cpp  checkbox.cpp  dropdown.cpp  text.cpp
